POR/RefEdge/src/objects/Custom_Settings__c.object
<CustomObject>
    <fields>
        <fullName>PUM_New_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <description>New Contacts added through Profile Updates will create a Nomination that can be reviewed prior to acceptance. If unchecked, new Contacts added through Profile Updates will be immediately added as Program Members.</description>
        <inlineHelpText>New Contacts added through Profile Updates will create a Nomination that can be reviewed prior to acceptance. If unchecked, new Contacts added through Profile Updates will be immediately added as Program Members.</inlineHelpText>
        <label>New Contact Creates Nomination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PUM_No_Response_Days__c</fullName>
        <description>Indicates the number of days after the Profile Update notification is sent that the Profile Update Status will be set to No Response.  If no value is entered then no update to the status occurs.</description>
        <inlineHelpText>Indicates the number of days after the Profile Update notification is sent that the Profile Update Status will be set to No Response.  If no value is entered then no update to the status occurs.</inlineHelpText>
        <label>No Response Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Populate_Summary_frm_Account_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populate Summary from Account Description</description>
        <label>Populate Summary from Acct Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_selection_of_mapped_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevent selection of mapped attributes in add new Attributes</description>
        <inlineHelpText>Prevent selection of mapped attributes in add new Attributes</inlineHelpText>
        <label>Prevent selection of mapped Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkBox would be helpful for the users who want that the chatter and email post should be private and not public.</description>
        <inlineHelpText>Select this checkBox if you want the chatter post should be private.</inlineHelpText>
        <label>Private Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Update_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the Account/Reference Owner notifying them that they are no longer responsible for a Peer2 Peer Request.</inlineHelpText>
        <label>Process Update Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Update_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the email sent to the Account/Reference Owner notifying them that they are no longer responsible for a Peer2 Peer Request.</inlineHelpText>
        <label>Process Update Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Created_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the public group configured for the CRP Team when new Reference Program Member Contacts are added via the Profile Update form.</inlineHelpText>
        <label>Reference Profile Created Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Created_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the public group configured for the CRP Team when new Reference Program Member Contacts are added via the Profile Update form.</inlineHelpText>
        <label>Reference Profile Created Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Created_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the public group configured for the CRP Team when new Reference Program Member Contacts are added via the Profile Update form.</description>
        <inlineHelpText>Enables the slack message sent to the public group configured for the CRP Team when new Reference Program Member Contacts are added via the Profile Update form.</inlineHelpText>
        <label>Reference Profile Created Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Creation_from_Ref_Lead_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the public group configured for the CRP Team when Create Reference Profile is enabled for Reference Lead Finder and a new Reference Profile is created as a result of a Reference Lead.</inlineHelpText>
        <label>Profile Creation via RLF Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Creation_from_Ref_Lead_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the public group configured for the CRP Team when Create Reference Profile is enabled for Reference Lead Finder and a new Reference Profile is created as a result of a Reference Lead.</inlineHelpText>
        <label>Profile Creation via RLF Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Creation_from_Ref_Lead_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the public group configured for the CRP Team when Create Reference Profile is enabled for Reference Lead Finder and a new Reference Profile is created as a result of a Reference Lead.</description>
        <inlineHelpText>Enables the slack message sent to the public group configured for the CRP Team when Create Reference Profile is enabled for Reference Lead Finder and a new Reference Profile is created as a result of a Reference Lead.</inlineHelpText>
        <label>Profile Creation via RLF Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Update_Reminder_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Chatter sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</description>
        <inlineHelpText>Enables the Chatter sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</inlineHelpText>
        <label>Profile Update Reminder Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Update_Reminder_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the email sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</description>
        <inlineHelpText>Enables the email sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</inlineHelpText>
        <label>Profile Update Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profile_Update_Reminder_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</description>
        <inlineHelpText>Enables the slack message sent to the Customer Reference Team public group reminding them of an upcoming automatic Profile Update Minder launch.</inlineHelpText>
        <label>Profile Update Reminder Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Account_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Case_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Contact_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Opportunity_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Owner_Update_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the requester when the owner changes on a Managed Request.</inlineHelpText>
        <label>Project Owner Update Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Owner_Update_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the email sent to the requester when the owner changes on a Managed Request.</inlineHelpText>
        <label>Project Owner Update Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Owner_Update_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the requester when the owner changes on a Managed Request.</description>
        <inlineHelpText>Enables the slack message sent to the requester when the owner changes on a Managed Request.</inlineHelpText>
        <label>Project Owner Update Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Subject_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subject Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prompt_Message__c</fullName>
        <defaultValue>&quot;Would you like to see References for this Opportunity?&quot;</defaultValue>
        <inlineHelpText>The message that is displayed in the &quot;Need References?&quot; prompt. Click “Preview” link (click Edit to see this link ) to see how the prompt will look.</inlineHelpText>
        <label>Prompt Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quarantine_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Quarantined Refresh updates must be approved by a Reference Manager before they can
be committed</description>
        <inlineHelpText>When checked, Profile Update Details records must be accepted before they are saved to the Reference Profile.</inlineHelpText>
        <label>Quarantine Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RLF_Reminder_Days__c</fullName>
        <inlineHelpText>Indicates the number of days after the &quot;Are they referenceable yet?&quot; notification is sent that a reminder is sent. If no value is entered then no reminder is sent.</inlineHelpText>
        <label>Reminder Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Permission_Sets__c</fullName>
        <label>RM Permission Sets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RM_Profiles__c</fullName>
        <label>RM Profiles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RUL_Activities_Contact__c</fullName>
        <description>The number of activities an contact is willing to participate in over a specified amount of time</description>
        <inlineHelpText>The number of activities for which an Contact is available for during the defined time period.</inlineHelpText>
        <label>Number of Activities in Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUL_Activities__c</fullName>
        <description>The number of activities an account is willing to participate in over a specified amount of time</description>
        <inlineHelpText>The number of activities for which an Account is available for during the defined time period.</inlineHelpText>
        <label>Number of Activities in Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUL_Period_Contact__c</fullName>
        <description>The specified period of time for a set number of reference activities (e.g., 3 activities every 90 days).</description>
        <inlineHelpText>The specified period of time for a set number of reference activities (e.g., 3 activities every 90 days).</inlineHelpText>
        <label>Period Length</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RUL_Period__c</fullName>
        <description>The specified period of time for a set number of reference activities (e.g., 3 activities every 90 days).</description>
        <inlineHelpText>The specified period of time for a set number of reference activities (e.g., 3 activities every 90 days).</inlineHelpText>
        <label>Period Length</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RefSearch_Filters_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Defaults Advanced Filters in RefSearch to &quot;All&quot;. When selecting multiple Filter attributes only results that match “All” selections will be returned. Users can switch this setting in RefSearch to &quot;Any&quot; to modify the results.</inlineHelpText>
        <label>Default Filters to &quot;All&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Owner_Update_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the Chatter notification sent to the public group configured for the CRP Team when the Opportunity owner specifies the new person who should be contacted to determine if the Account is referenceable.</inlineHelpText>
        <label>RLF Owner Update Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Owner_Update_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the email sent to the public group configured for the CRP Team when the Opportunity owner specifies the new person who should be contacted to determine if the Account is referenceable.</inlineHelpText>
        <label>RLF Owner Update Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Owner_Update_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the public group configured for the CRP Team when the Opportunity owner specifies the new person who should be contacted to determine if the Account is referenceable.</description>
        <inlineHelpText>Enables the slack message sent to the public group configured for the CRP Team when the Opportunity owner specifies the new person who should be contacted to determine if the Account is referenceable.</inlineHelpText>
        <label>RLF Owner Update Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Reminder_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the reminder Chatter notification sent to the Opportunity owner if they have not responded to the initial Reference Lead Finder notification.</inlineHelpText>
        <label>RLF Reminder Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Reminder_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the reminder email sent to the Opportunity owner if they have not responded to the initial Reference Lead Finder notification.</inlineHelpText>
        <label>RLF Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Reminder_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the reminder slack message sent to the Opportunity owner if they have not responded to the initial Reference Lead Finder notification.</description>
        <inlineHelpText>Enables the reminder slack message sent to the Opportunity owner if they have not responded to the initial Reference Lead Finder notification.</inlineHelpText>
        <label>RLF Reminder Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Reminder_member_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the reminder Chatter notification sent to the Opportunity owner when their Account is already a Reference Program Member, and they have not responded to the initial Reference Lead Finder notification.</inlineHelpText>
        <label>RLF Reminder - New Contact Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Reminder_member_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enables the reminder email sent to the Opportunity owner when their Account is already a Reference Program Member, and they have not responded to the initial Reference Lead Finder notification.</inlineHelpText>
        <label>RLF Reminder - New Contact Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Lead_Reminder_member_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the reminder slack message sent to the Opportunity owner when their Account is already a Reference Program Member, and they have not responded to the initial Reference Lead Finder notification.</description>
        <inlineHelpText>Enables the reminder slack message sent to the Opportunity owner when their Account is already a Reference Program Member, and they have not responded to the initial Reference Lead Finder notification.</inlineHelpText>
        <label>RLF Reminder - New Contact Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Prosepector_Lead_Owner__c</fullName>
        <label>Reference Prospector Lead Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Prospector_Body__c</fullName>
        <defaultValue>&quot;The customer reference team is always seeking new ways to showcase client success. Accounts including the ones below have been identified as owned by you and potential candidates for the customer reference program. Do you think they would act as a reference at this time?&quot;</defaultValue>
        <label>Reference Prospector Notification Body</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ref_Prospector_Campaign_Lead_Count__c</fullName>
        <inlineHelpText>Prospective Reference Leads that will be included in this Campaign</inlineHelpText>
        <label>Reference Prospector Campaign Lead Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_Prospector_Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Activates the Build Reference Prospector List button on Reference Lead View Lists allowing for the creation of Reference Prospector Leads</inlineHelpText>
        <label>Enable Reference Prospector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Prospector_Hdr_Txt__c</fullName>
        <defaultValue>&quot;Potential Reference Leads&quot;</defaultValue>
        <label>Reference Prospector Leads Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Prospector_Lead_Count__c</fullName>
        <inlineHelpText>Count of Prospective Reference Leads (all Reference Leads where “Status” = Request Pending)</inlineHelpText>
        <label>Reference Prospector Lead Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_Prospector_SubHdr_Txt__c</fullName>
        <label>Ref Prospector Leads SubHeader Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Prospector_Subject__c</fullName>
        <defaultValue>&quot;Potential Reference Accounts&quot;</defaultValue>
        <label>Ref Prospector Notification Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Lead_No_Response_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Chatter sent to the Customer Reference Team public group notifying them that the Opportunity Owner has not responded in the specified timeframe to the &quot;Are they referenceable yet?&quot; notification.</description>
        <inlineHelpText>Enables the Chatter sent to the Customer Reference Team public group notifying them that the Opportunity Owner has not responded in the specified timeframe to the &quot;Are they referenceable yet?&quot; notification.</inlineHelpText>
        <label>Reference Lead No Response Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Lead_No_Response_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the email sent to the Customer Reference Team public group notifying them that the Opportunity Owner has not responded in the specified timeframe to the &quot;Are they referenceable yet?&quot; notification.</description>
        <inlineHelpText>Enables the email sent to the Customer Reference Team public group notifying them that the Opportunity Owner has not responded in the specified timeframe to the &quot;Are they referenceable yet?&quot; notification.</inlineHelpText>
        <label>Reference Lead No Response Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Profile_Form_Settings__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos; + $Setup.POR_App_Configuration__c.Namespace__c + &apos;ReferenceProfileSettingPage&apos;, &apos;Manage&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Profile Form Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Profile_Section_Header__c</fullName>
        <label>Reference Profile Section Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Prospector_Settings__c</fullName>
        <formula>IF( $User.UITheme == &apos;Theme4d&apos;, 
HYPERLINK(&apos;/apex/&apos; + $Setup.POR_App_Configuration__c.Namespace__c + &apos;RefProspectorSettingsPage&apos;, &apos;Manage&apos;, &apos;_self&apos;), 
HYPERLINK(&apos;/apex/&apos; + $Setup.POR_App_Configuration__c.Namespace__c + &apos;RefProspectorSettingsPage&apos;, &apos;Manage&apos;, &apos;_blank&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference Prospector Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Refresh_Settings__c</fullName>
        <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.POR_App_Configuration__c.Namespace__c +&apos;ReferenceRefreshSettingsPage?customSettingId=&apos;+ Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Update Minder Settings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Refresh_Update_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Chatter sent to the Customer Reference Team public group notifying them of modifications made by an Owner.</description>
        <inlineHelpText>Enables the Chatter sent to the Customer Reference Team public group notifying them of modifications made by an Owner.</inlineHelpText>
        <label>Profile Update Detail Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Refresh_Update_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the email sent to the Customer Reference Team public group notifying them of modifications made by an Owner.</description>
        <inlineHelpText>Enables the email sent to the Customer Reference Team public group notifying them of modifications made by an Owner.</inlineHelpText>
        <label>Profile Update Detail Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Refresh_Update_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Customer Reference Team public group notifying them of modifications made by an Owner.</description>
        <inlineHelpText>Enables the slack message sent to the Customer Reference Team public group notifying them of modifications made by an Owner.</inlineHelpText>
        <label>Profile Update Detail Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Update_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Chatter containing the Profile Update link sent to the designated Account /Reference /Profile Update Owner.</description>
        <inlineHelpText>Enables the Chatter containing the Profile Update link sent to the designated Account /Reference /Profile Update Owner.</inlineHelpText>
        <label>Profile Update Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Update_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the email containing the Profile Update link sent to the designated Account /Reference/Profile Update Owner.</description>
        <inlineHelpText>Enables the email containing the Profile Update link sent to the designated Account /Reference/Profile Update Owner.</inlineHelpText>
        <label>Profile Update Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Update_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message containing the Profile Update link sent to the designated Account /Reference/Profile Update Owner.</description>
        <inlineHelpText>Enables the slack message containing the Profile Update link sent to the designated Account /Reference/Profile Update Owner.</inlineHelpText>
        <label>Profile Update Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Refresh_Wait_Days__c</fullName>
        <inlineHelpText>A Refresh request will be initiated for any profile that has not been updated in this many
days. This includes updates to attributes, mapped attributes, and referenceability</inlineHelpText>
        <label>Update Wait Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_to_Owner__c</fullName>
        <description>Number of days before deadline that a reminder will be sent to the owner</description>
        <inlineHelpText>The number of days before a Request deadline that a reminder will be sent to the Account/Reference Owner.</inlineHelpText>
        <label>Reminder to Owner</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remove_Points_if_Use_will_not_occur__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove Points if ‘Use will not occur’</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Approval_Decline_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Chatter notification sent by an Account Owner or Reference Owner in response to an Account Request.</description>
        <inlineHelpText>Enables the Chatter notification sent by an Account Owner or Reference Owner in response to an Account Request.</inlineHelpText>
        <label>Request Approval/Decline Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Approval_Decline_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the email sent by an Account Owner or Reference Owner in response to an Account Request.</description>
        <inlineHelpText>Enables the email sent by an Account Owner or Reference Owner in response to an Account Request.</inlineHelpText>
        <label>Request Approval/Decline Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Approval_Decline_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent by an Account Owner or Reference Owner in response to an Account Request.</description>
        <inlineHelpText>Enables the slack message sent by an Account Owner or Reference Owner in response to an Account Request.</inlineHelpText>
        <label>Request Approval/Decline Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Escalation_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Chatter notification sent to the Account/Reference Owner’s manager and the Account/Reference Owner on the specified number of days before a Request deadline.</description>
        <inlineHelpText>Enables the Chatter notification sent to the Account/Reference Owner’s manager and the Account/Reference Owner on the specified number of days before a Request deadline.</inlineHelpText>
        <label>Request Escalation Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Escalation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the email sent to the Account/Reference Owner’s manager and the Account/Reference Owner on the specified number of days before a Request deadline.</description>
        <inlineHelpText>Enables the email sent to the Account/Reference Owner’s manager and the Account/Reference Owner on the specified number of days before a Request deadline.</inlineHelpText>
        <label>Request Escalation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Escalation_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the Account/Reference Owner’s manager and the Account/Reference Owner on the specified number of days before a Request deadline.</description>
        <inlineHelpText>Enables the slack message sent to the Account/Reference Owner’s manager and the Account/Reference Owner on the specified number of days before a Request deadline.</inlineHelpText>
        <label>Request Escalation Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Feedback_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the Chatter sent to the requester asking for feedback on the specified number of days after the original Request deadline.</inlineHelpText>
        <label>Request Feedback Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Feedback_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables the email sent to the requester asking for feedback on the specified number of days after the original Request deadline.</inlineHelpText>
        <label>Request Feedback Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Feedback_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the requester asking for feedback on the specified number of days after the original Request deadline.</description>
        <inlineHelpText>Enables the slack message sent to the requester asking for feedback on the specified number of days after the original Request deadline.</inlineHelpText>
        <label>Request Feedback Slack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Managed_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Chatter notification sent to the public group configured for the Reference Team for any requests where the Account is marked as ‘Managed’ or no Account is specified.</description>
        <inlineHelpText>Enables the Chatter notification sent to the public group configured for the Reference Team for any requests where the Account is marked as ‘Managed’ or no Account is specified.</inlineHelpText>
        <label>Request (Managed) Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Managed_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the email sent to the public group configured for the Reference Team for any requests where the Account is marked as ‘Managed’ or no Account is specified.</description>
        <inlineHelpText>Enables the email sent to the public group configured for the Reference Team for any requests where the Account is marked as ‘Managed’ or no Account is specified.</inlineHelpText>
        <label>Request (Managed) Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Managed_Slack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the slack message sent to the public group configured for the Reference Team for any requests where the Account is marked as ‘Managed’ or no Account is specified.</description>
        <inlineHelpText>Enables the slack message sent to the public group configured for the Reference Team for any requests where the Account is marked as ‘Managed’ or no Account is specified.</inlineHelpText>
        <label>Request (Managed) Slack</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>